# rules_proto_grpc

./: aspect.bzl  plugin.bzl
github.com/grpc-ecosystem/grpc-gateway/: BUILD.bazel
