load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "grpc_gateway_plugin",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    outputs = [
        "{protopath}.pb.gw.go",
    ],
    require_feature = "service",
    # Show options:
    # $ bazel run @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway -- --help
    # options = [
    #     "logtostderr=true",
    # ],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "swagger_plugin",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    outputs = [
        "{protopath}.swagger.json",
    ],
    # Show options:
    # $ bazel run @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-swagger -- --help
    # options = [
    #     "json_names_for_fields",
    # ],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-swagger",
    visibility = ["//visibility:public"],
)
